# SaveAll

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml  readme.md  requirements.txt  tree_structure.txt
Save_all/: .dockerignore  Dockerfile  jp_test.ipynb  manage.py  pytest.ini  requirements.txt
Save_all/Save_all/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
Save_all/blog/: admin.py  forms.py  models.py  urls.py  views.py
Save_all/blog/migrations/: 0001_initial.py  0002_post_author.py  0003_post_content.py  0004_alter_post_content_alter_post_title.py  0005_post_slug.py  0006_alter_post_slug.py  0007_post_likes_alter_post_slug.py  0008_post_reply.py  0009_alter_post_content.py  0010_remove_post_likes_remove_post_reply.py  0011_post_likes_post_post_saves_posts.py  0012_alter_post_likes_post_alter_post_saves_posts.py  0013_alter_post_title.py  0014_comment.py  0015_post_image.py  0016_alter_post_image.py  0017_post_profile.py
Save_all/blog/tests/: test_models.py
Save_all/chats/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
Save_all/communities/: admin.py  forms.py  models.py  urls.py  views.py
Save_all/discussions/: admin.py  forms.py  models.py  urls.py  views.py
Save_all/feed/: admin.py  models.py  urls.py  views.py
Save_all/friends/: admin.py  models.py  urls.py  views.py
Save_all/middleware/: middleware.py
Save_all/notifications/: apps.py  consumers.py  routing.py
Save_all/users/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
nginx/: nginx.conf
(+66 files in other folders)
